--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <ul>
             <li>Introduction to Discrete Mathematics</li>
             <li>Introduction to Programming in C </li>
-            <li>Linear Algebra</li>
+            <li>Probability And Stochastic Process</li>  
             <li>Data Structures</li>
             <li>Computer Architecture</li>
             <li>Programming Paradigms And Pragmatics</li>
+            <li>Linear Algebra</li>
             <li>Software Systems</li>
             </ul><br>
 
