--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
 
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-red"></i>Second Year B.Tech CSE Student </p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-red"></i>Third Year B.Tech CSE Student </p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-red"></i>Indian Institute Of Technology, Ropar</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-red"></i>2015csb1038@iitrpr.ac.in</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-red"></i>+91-8160164243, +91-9558277266</p>
