--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h4><b>Uneet Patel</b></h4>
           </div>
         </div>
-
+        <br>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-red"></i>Third Year B.Tech CSE Student </p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-red"></i>Indian Institute Of Technology, Ropar</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-red"></i>2015csb1038@iitrpr.ac.in</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-red"></i>+91-8160164243, +91-9558277266</p>
           <hr>
-
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-red"></i>Programming Languages And Scripts</b></p>
+          <br>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-red"></i>Programming Languages And Scripts</b></p><br>
           <h6><b>Programming Languages</b></h6>
           <ul>
           <li>C/C++</li>
@@ -44,7 +44,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <li>HTML/CSS</li>
           <li>Django(Framework)</li>
           </ul>
-
+          <br>
           <h6><b>Scripting Languages</b></h6>
           <ul>
           <li>Perl</li>
@@ -62,7 +62,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <li>SolidWorks</li>
           <li>Photoshop</li>
           <li>After Effects</li>
-          </ul>
+          </ul><br>
           <h6><b>OS</b></h6>
           <ul>
           <li>Linux</li>
@@ -72,7 +72,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
 
             <p class="w3-large"><b><i class="fa fa-pencil-square fa-fw w3-margin-right w3-text-red"></i>Courses Taken</b></p>
-            <ul>
+            <br><ul>
             <li>Introduction to Discrete Mathematics</li>
             <li>Introduction to Programming in C </li>
             <li>Probability And Stochastic Process</li>  
@@ -84,7 +84,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </ul><br>
 
             <p class="w3-large"><b><i class="fa fa-futbol-o fa-fw w3-margin-right w3-text-red"></i>Exracurricular Activities and Responsibilities</b></p>
-            <ul>
+            <br><ul>
             <li><b>Active Member</b> - Coding Club</li>
             <li><b>Representative/Head</b> - Photography Club</li>
             <li><b>Active ENACTUS member and represented enactus IIT Ropar in Enactus National Competition</b> held in Mumbai in 2015</li>
