--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-red"></i>+91-8160164243, +91-9558277266</p>
           <hr>
           <br>
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-red"></i>Programming Languages And Scripts</b></p><br>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-red"></i>Programming Languages And Scripts</b></p>
           <h6><b>Programming Languages</b></h6>
           <ul>
           <li>C/C++</li>
@@ -44,7 +44,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <li>HTML/CSS</li>
           <li>Django(Framework)</li>
           </ul>
-          <br>
+          
           <h6><b>Scripting Languages</b></h6>
           <ul>
           <li>Perl</li>
@@ -69,10 +69,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <li>Windows</li>
           <li>Mac OS</li>
           </ul>
-          <br>
+          
 
             <p class="w3-large"><b><i class="fa fa-pencil-square fa-fw w3-margin-right w3-text-red"></i>Courses Taken</b></p>
-            <br><ul>
+            <ul>
             <li>Introduction to Discrete Mathematics</li>
             <li>Introduction to Programming in C </li>
             <li>Probability And Stochastic Process</li>  
@@ -84,7 +84,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </ul><br>
 
             <p class="w3-large"><b><i class="fa fa-futbol-o fa-fw w3-margin-right w3-text-red"></i>Exracurricular Activities and Responsibilities</b></p>
-            <br><ul>
+            <ul>
             <li><b>Active Member</b> - Coding Club</li>
             <li><b>Representative/Head</b> - Photography Club</li>
             <li><b>Active ENACTUS member and represented enactus IIT Ropar in Enactus National Competition</b> held in Mumbai in 2015</li>
