Adds DP and converts indents to tabs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css?family=Krub&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: 'Krub', sans-serif}
+  html,body,h1,h2,h3,h4,h5,h6 {font-family: 'Krub', sans-serif}
 </style>
 <body style="background-color:#F4F6F6;">
 
@@ -23,7 +23,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: 'Krub', sans-serif}
 
       <div class="w3-camo-white w3-card-4 w3-text-grey">
         <div class="w3-card-2" style="width:100%">
-         
+          <img src="DP.jpg" alt="Person" style="width:100%">
           <div class="w3-container">
             <h4><b>Uneet Patel</b></h4>
           </div>
@@ -38,38 +38,38 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: 'Krub', sans-serif}
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
           <h6><b>Programming Languages</b></h6>
           <ul>
-						<li>
-							<span class="w3-tag w3-round w3-margin-top" style="background-color:#719A73; margin-top:4px;">C</span>
-							<span class="w3-tag w3-round w3-margin-top" style="background-color:#719A73; margin-top:4px;">C++</span>
-							<span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">Javascript</span>
-							<span class="w3-tag w3-camo-tan w3-round" style="background-color:#5B6268; margin-top:4px;">Python</span>
-							<span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">Ruby</span>
-							<span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">Perl</span>
-							<span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">PHP</span>
-						</li>
+            <li>
+              <span class="w3-tag w3-round w3-margin-top" style="background-color:#719A73; margin-top:4px;">C</span>
+              <span class="w3-tag w3-round w3-margin-top" style="background-color:#719A73; margin-top:4px;">C++</span>
+              <span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">Javascript</span>
+              <span class="w3-tag w3-camo-tan w3-round" style="background-color:#5B6268; margin-top:4px;">Python</span>
+              <span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">Ruby</span>
+              <span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">Perl</span>
+              <span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">PHP</span>
+            </li>
           </ul>
 
           <h6><b>Libraries and Frameworks</b></h6>
           <ul>
           <li>
-						<span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">ReactJS</span>
-						<span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">Mobx</span>
-						<span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">Redux</span>
-						<span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">Django</span>
+            <span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">ReactJS</span>
+            <span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">Mobx</span>
+            <span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">Redux</span>
+            <span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">Django</span>
             <span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">Ruby on Rails</span>
             <span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">Tensor Flow</span>
             <span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">OpenCV</span>
-					</li>
+          </li>
           </ul>
 
           <h6><b>Databases</b></h6>
           <ul>
           <li>
-						<span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">Postgres</span>
-						<span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">MySQL</span>
-						<span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">InfluxDB</span>
+            <span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">Postgres</span>
+            <span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">MySQL</span>
+            <span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">InfluxDB</span>
             <span class="w3-tag w3-round" style="background-color:#DC9175; margin-top:4px;">MongoDB</span>
-					</li>
+          </li>
           </ul>
           <hr>
 
@@ -81,7 +81,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: 'Krub', sans-serif}
               <span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">LateX</span>
               <span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">PhotoShop</span>
               <span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">After Effects</span>
-  					</li>
+            </li>
           </ul><br>
           <h6><b>OS</b></h6>
           <ul>
@@ -89,7 +89,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: 'Krub', sans-serif}
               <span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">Linux</span>
               <span class="w3-tag w3-round" style="background-color:#719A73; margin-top:4px;">MacOS</span>
               <span class="w3-tag w3-round" style="background-color:#5B6268; margin-top:4px;">Windows</span>
-  					</li>
+            </li>
           </ul>
           <i class="fa fa-sort-alpha-desc fa-fw w3-margin-right w3-large w3-text-teal"></i>
           <span class="w3-tag w3-round w3-margin-top" style="background-color:#719A73;">Strong Hold</span>
