--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-camo.css">
 <link href="https://fonts.googleapis.com/css?family=Krub&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="icon" type="image/png" href="DP.jpg" sizes="96x96">
 <style>
   html,body,h1,h2,h3,h4,h5,h6 {font-family: 'Krub', sans-serif}
 </style>
