--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>Uneet Patel CV</title>
+<head>
+<title>Uneet Patel</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Uneet Patel">
+<meta name="description" content="Hi everybody! My name is Uneet, and welcome to my site. I am a computer science graduate from IIT Ropar. I am a travel enthusiast, frim beleiver of karma and ever thirsty to learn. Please use my site wisely cause I trace each and every click of yours">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-camo.css">
 <link href="https://fonts.googleapis.com/css?family=Krub&display=swap" rel="stylesheet">
@@ -11,6 +14,7 @@
 <style>
   html,body,h1,h2,h3,h4,h5,h6 {font-family: 'Krub', sans-serif}
 </style>
+</head>
 <body style="background-color:#F4F6F6;">
 
 <!-- Page Container -->
