Adds facebook link in footer

--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@ Input is the machine language code and displays results after each cycle  of pro
 <footer class="w3-container w3-teal  w3-center w3-margin-top">
   <p>GitHub</p>
   <a href="https://github.com/Uneetpatel7"><i class="fa fa-github w3-hover-opacity"></i></a>
+  <p>Facebook</p>
+  <a href="https://www.facebook.com/unitpatel25"><i class="	fa fa-facebook-official w3-hover-opacity"></i></a>
 <br><br></footer>
 
 </body>
