Adds other social media links

--- a/index.html
+++ b/index.html
@@ -195,11 +195,12 @@ Input is the machine language code and displays results after each cycle  of pro
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-container w3-teal  w3-center w3-margin-top">
-  <p>GitHub</p>
+<footer class="w3-cell-row w3-teal  w3-center w3-margin-top">
+  <a href="https://www.linkedin.com/in/uneet-patel-6a6210150/"><i class="fa fa-linkedin-square w3-hover-opacity"></i></a>
   <a href="https://github.com/Uneetpatel7"><i class="fa fa-github w3-hover-opacity"></i></a>
-  <p>Facebook</p>
-  <a href="https://www.facebook.com/unitpatel25"><i class="	fa fa-facebook-official w3-hover-opacity"></i></a>
+  <a href="https://stackoverflow.com/users/8255883/uneet7"><i class="fa fa-stack-overflow w3-hover-opacity"></i></a>
+  <a href="https://www.facebook.com/unitpatel25"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+  <a href="https://www.instagram.com/musetache7/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
 <br><br></footer>
 
 </body>
