--- a/index.html
+++ b/index.html
@@ -195,12 +195,24 @@ Input is the machine language code and displays results after each cycle  of pro
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-cell-row w3-teal  w3-center w3-margin-top">
+<footer class="w3-cell-row w3-teal w3-display-container w3-margin-top w3-padding-16">
+<div class="w3-container w3-cell w3-display-middle">
+  <div class="w3-container w3-cell">
   <a href="https://www.linkedin.com/in/uneet-patel-6a6210150/"><i class="fa fa-linkedin-square w3-hover-opacity"></i></a>
+  </div>
+  <div class="w3-container w3-cell">
   <a href="https://github.com/Uneetpatel7"><i class="fa fa-github w3-hover-opacity"></i></a>
+  </div>
+  <div class="w3-container w3-cell">
   <a href="https://stackoverflow.com/users/8255883/uneet7"><i class="fa fa-stack-overflow w3-hover-opacity"></i></a>
+  </div>
+  <div class="w3-container w3-cell">
   <a href="https://www.facebook.com/unitpatel25"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+  </div>
+  <div class="w3-container w3-cell">
   <a href="https://www.instagram.com/musetache7/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  </div>
+</div>
 <br><br></footer>
 
 </body>
