Add google search meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Uneet Patel">
+<meta name="google-site-verification" content="Bmr8VM39gJfobIBtp3i1N5V-I27D3lWoDd-HXGeS07I" />
 <meta name="description" content="Hi everybody! My name is Uneet, and welcome to my site. I am a computer science graduate from IIT Ropar. I am a travel enthusiast, frim beleiver of karma and ever thirsty to learn. Please use my site wisely cause I trace each and every click of yours">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-camo.css">
