Update work history

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </div>
         <br>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Third Year B.Tech CSE Student </p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>B.Tech in Computer Science </p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Indian Institute Of Technology, Ropar</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>2015csb1038@iitrpr.ac.in</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91-8160164243, +91-9558277266</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91-8160164243</p>
           <hr>
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
           <h6><b>Programming Languages</b></h6>
@@ -163,9 +163,19 @@ Input is the machine language code and displays results after each cycle  of pro
       <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Academics Details</h2>
         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Voylr</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2019-Present</h6>
+          <p class="w3-text-dark-grey">Founding Director</p>
+          <p class="w3-text-dark-grey">          
+            Voylr is an online booking platform for in-destination activities and adventures. Our mission is to create a transparent marketplace in front of the customer by listing multiple authenticated field experts for the same service with the best possible prices. This helps us to create a customer-centric environment where no single customer should worry about negotiating to the best prices, safety, and reliability of the expert. 
+            Pay-on-site and it's one of a kind pricing strategy – customer-centric innovations that have made in-destination services booking more accessible and affordable for millions of Indians.
+          </p>
+          <hr>
+        </div>
+        <div class="w3-container">
           <h5 class="w3-opacity"><b>Indian Institute Of Technology Ropar</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015-Present</h6>
-          <p class="w3-text-dark-grey">B.Tech In Computer Science and Engineering <br> CGPA = <b>6.13/10</b></p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015-2019</h6>
+          <p class="w3-text-dark-grey">B.Tech In Computer Science and Engineering</p>
           <hr>
         </div>
         <div class="w3-container">
