Adds work details

--- a/index.html
+++ b/index.html
@@ -118,8 +118,36 @@
 
     <!-- Right Column -->
     <div class="w3-twothird">
+      <div class="w3-container w3-card-2 w3-white w3-margin-bottom">      
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Founding Director & CTO - Voylr</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2019-Present</h6>
+          <p class="w3-text-dark-grey">
+            Voylr is an online booking platform for in-destination activities and adventures. Our mission is to create a transparent marketplace in front of the customer by listing multiple authenticated field experts for the same service with the best possible prices. This helps us to create a customer-centric environment where no single customer should worry about negotiating to the best prices, safety, and reliability of the expert. 
+            Pay-on-site and it's one of a kind pricing strategy – customer-centric innovations that have made in-destination services booking more accessible and affordable for millions of Indians.
+          </p>
+          <hr>
+        </div>
+       <div class="w3-container">
+          <h5 class="w3-opacity"><b>Summer Intern - Go-jek</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - July 2018</h6>
+          <p class="w3-text-dark-grey">
+            Developed an react native app that is used as a means for Live Data/Metric Visualization and Analysis Tool.
+            The aggregated booking data/metrics with different topics was pushed into the INFLUXDB from KAFKA by an
+            internal tool called DAGGER. The server side of the app was built in Ruby on Rails which provided RESTful API
+            endpoints to access the aggregated time-series data/metrics from influxDB. The client side to visualize the aggregated
+            data/metrics was built in REACT NATIVE independently from the server side. The back-end was containerized and
+            deployed with CI/CD pipelines with the help of KUBERNETES.
+            Final App provided the users a flexibility to create a Dashboard and visualize the desired data/booking-metrics of
+            particular duration or days in the different form of a chart, bar-graphs, even simple numbers etc.
+         </p>
+          <hr>
+        </div>
+    </div>
 
-      <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+
+     <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Relevant Course Project</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Data Management System For Labs  Of Institute</b></h5>
@@ -159,6 +187,7 @@ Input is the machine language code and displays results after each cycle  of pro
         </div>
 <br>
       </div>
+      
 
       <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Academics Details</h2>
