--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Uneet Patel">
 <meta name="google-site-verification" content="Bmr8VM39gJfobIBtp3i1N5V-I27D3lWoDd-HXGeS07I" />
-<meta name="description" content="Hi everybody! My name is Uneet, and welcome to my site. I am a computer science graduate from IIT Ropar. I am a travel enthusiast, frim beleiver of karma and ever thirsty to learn. Please use my site wisely cause I trace each and every click of yours">
+<meta name="description" content="Hi everybody! My name is Uneet, and welcome to my site. I am a computer science graduate from IIT Ropar. I am a travel enthusiast, frim beleiver of karma and ever thirsty to learn">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-camo.css">
 <link href="https://fonts.googleapis.com/css?family=Krub&display=swap" rel="stylesheet">
@@ -165,7 +165,8 @@
           <h5 class="w3-opacity"><b>Simple RISC Architecture Emulator In C (team of 3)</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2016 - Jan 2012</h6>
           <p class="w3-text-dark-grey">In this project an emulator was designed in C as a part of Computer Architecture project for the assembly language (Simple RISC). The emulator works on the concepts of  Pipelining in the processor.
-Input is the machine language code and displays results after each cycle  of processor. </p>
+            Input is the machine language code and displays results after each cycle  of processor. 
+          </p>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Lost And Found Portal(Team of 4)</b></h5>
@@ -185,22 +186,12 @@ Input is the machine language code and displays results after each cycle  of pro
           <p class="w3-text-dark-grey">This project involves the concepts of Digital Electronics and Arduino. This project controls the any device having infrateal receiver via infrateal rays to automatically tealuce the volume of that device if it exceeds our desiteal level.</p>
           <hr>
         </div>
-<br>
+        <br>
       </div>
       
 
       <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Academics Details</h2>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Voylr</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2019-Present</h6>
-          <p class="w3-text-dark-grey">Founding Director</p>
-          <p class="w3-text-dark-grey">          
-            Voylr is an online booking platform for in-destination activities and adventures. Our mission is to create a transparent marketplace in front of the customer by listing multiple authenticated field experts for the same service with the best possible prices. This helps us to create a customer-centric environment where no single customer should worry about negotiating to the best prices, safety, and reliability of the expert. 
-            Pay-on-site and it's one of a kind pricing strategy – customer-centric innovations that have made in-destination services booking more accessible and affordable for millions of Indians.
-          </p>
-          <hr>
-        </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Indian Institute Of Technology Ropar</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015-2019</h6>
@@ -215,13 +206,18 @@ Input is the machine language code and displays results after each cycle  of pro
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Divine Child High School</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2014</h6>
           <p class="w3-text-dark-grey">Centra Board Of Secondary Education Class XII (Percentage=<b>90%</b>)</p>
         </div><hr>
       <div class="w3-container">
         <h5 class="w3-opacity"><b>L.P. Savani Vidhyabhavan</b></h5>
-        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013</h6>
+        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2012</h6>
         <p class="w3-text-dark-grey">Gujarat Secondary Education Board Class X (Percentage=<b>90%</b>)</p>
+      </div>
+      <div class="w3-container">
+        <h5 class="w3-opacity"><b>Gurukul Vidhyapeeth V.T. Choksi</b></h5>
+        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2000 - 2010</h6>
+        <p class="w3-text-dark-grey">Primary School</p>
       </div>
     </div>
 
@@ -238,7 +234,7 @@ Input is the machine language code and displays results after each cycle  of pro
 <footer class="w3-cell-row w3-teal w3-display-container w3-margin-top w3-padding-16">
 <div class="w3-container w3-cell w3-display-middle">
   <div class="w3-container w3-cell">
-  <a href="https://www.linkedin.com/in/uneet-patel-6a6210150/"><i class="fa fa-linkedin-square w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/uneet7/"><i class="fa fa-linkedin-square w3-hover-opacity"></i></a>
   </div>
   <div class="w3-container w3-cell">
   <a href="https://github.com/Uneetpatel7"><i class="fa fa-github w3-hover-opacity"></i></a>
