--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Founding Director & CTO - Voylr</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2019-Present</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2019-<span class="w3-tag w3-teal w3-round">Present</span></h6>
           <p class="w3-text-dark-grey">
             Voylr is an online booking platform for in-destination activities and adventures. Our mission is to create a transparent marketplace in front of the customer by listing multiple authenticated field experts for the same service with the best possible prices. This helps us to create a customer-centric environment where no single customer should worry about negotiating to the best prices, safety, and reliability of the expert. 
             Pay-on-site and it's one of a kind pricing strategy – customer-centric innovations that have made in-destination services booking more accessible and affordable for millions of Indians.
@@ -151,7 +151,7 @@
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Relevant Course Project</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Data Management System For Labs  Of Institute</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - Feb 2017</h6>
           <p>Currently Working</p>
           <hr>
         </div>
