Updates coursework projects

--- a/index.html
+++ b/index.html
@@ -150,40 +150,48 @@
      <div class="w3-container w3-card-2 w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Relevant Course Project</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Data Management System For Labs  Of Institute</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - Feb 2017</h6>
-          <p>Currently Working</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Room Booking System For The Institute In C++ (team of 2)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2016 - Dec 2016</h6>
-          <p class="w3-text-dark-grey">This Project was a part of the room booking system which is being implemented in the institute to ease the process of classrooms and labs allotment to the various instructors simultaneously thereby smoothing the process.  The concepts of Data Structures were extensively used in this project.</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Simple RISC Architecture Emulator In C (team of 3)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2016 - Jan 2012</h6>
-          <p class="w3-text-dark-grey">In this project an emulator was designed in C as a part of Computer Architecture project for the assembly language (Simple RISC). The emulator works on the concepts of  Pipelining in the processor.
-            Input is the machine language code and displays results after each cycle  of processor. 
+          <h5 class="w3-opacity"><b>Prediction of the Sentiment of a Movie Review Using ID3 Decision Tree Algorithm</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Sept 2017</h6>
+          <p>
+            Stanford’s Large Movie Review Dataset containing 50k movie reviews was used. The file in the dataset contained
+            around 90k words in which each word was used as attribute. The decision tree was learnt by ID3 algorithm, using the information gain heuristic to choose the next best attribute
+            for splitting function to approximate the Occam’s Razor hypothesis. Various techniques like early stopping criteria to avoid overfitting, post-pruning strategy, and making a decision
+            forest using feature bagging were used to increase the prediction accuracy on the test dataset.
           </p>
+          <hr>
         </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Lost And Found Portal(Team of 4)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2017 - May 2017</h6>
-          <p class="w3-text-dark-grey">This project involves the development of the lost and found portal for the institute to solve the regular lost items request.</p>
+       <div class="w3-container">
+          <h5 class="w3-opacity"><b>Implemented and Analysed Advanced Spatial Filtering Techniques for Contrast Enhancements</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Sept 2017</h6>
+          <p>
+            One of the most common Image enhancement technique Histogram Equalisation(HE) may result in over-enhancement
+            and feature loss problems that lead to unnatural look and loss of details in the processed images.
+            Therefore input image was processed through four levels of Intensity transformation namely Adaptive Histogram
+            Equalisation(HE), Gap Adjustment (GA), Gray Value Recovery (GVR) and Dark region enhancement (DRE). The
+            crux and details of above techniques were taken from the research article Contrast Enhancement Algorithm Based
+            on Gap Adjustment for Histogram Equalization.
+          </p>
+          <hr>
+       </div>
+       <div class="w3-container">
+          <h5 class="w3-opacity"><b>Functional And Pipeline Simulator for SimpleRISC Assembly Language</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2016 - Nov 2016</h6>
+          <p>
+            SimpleRISC is a simple, generic, complete and concise RISC ISA. The assembly language of SimpleRISC has only
+            21 instructions in its ISA. Functional(with no pipeline technique) and Pipelined Simulator were developed in C++ producing the same output.
+            Also compared the throughput differences between both of them. The pipelined simulator gave increased throughput due to better resource utilization. Both simulator contained five
+            processor classes namely Instruction Fetch, Decode, Execute, Memory and Memory Write Back.
+          </p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Tic-Tac-Toe Player vs Computer in C(Individual)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2017 - May 2017</h6>
-          <p class="w3-text-dark-grey">This project was a part of the curriculum of the Introduction to Programming in C. It is a player vs Computer game which can be played in the terminal.</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Universal Loudness Guard (Digital Electronics Project)(team of 2)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2016 - Dec 2016</h6>
-          <p class="w3-text-dark-grey">This project involves the concepts of Digital Electronics and Arduino. This project controls the any device having infrateal receiver via infrateal rays to automatically tealuce the volume of that device if it exceeds our desiteal level.</p>
+          <h5 class="w3-opacity"><b>Universal Loudness Guard for Infrared Devices using Arduino and Infrared Sensors</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2016 - Dec 2016</h6>
+          <p class="w3-text-dark-grey">
+            The device when paired with an audio system (supporting infrared signals) like television, speakers,etc. doesn’t allow
+            the device’s volume to increase above an amplitude threshold (tunable by the user).If the sound amplitude increases above the set threshold, it is detected by the microphone and encoded infrared
+            signals are sent to the device to decrease the volume until it is within specified limit.
+          </p>
           <hr>
         </div>
         <br>
